<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_movies">


    <fragment
        android:id="@+id/navigation_movies"
        android:name="com.example.submission4madeaziz.fragment.MoviesFragment"
        android:label="@string/title_movies"
        tools:layout="@layout/fragment_movies" />
    <fragment
        android:id="@+id/navigation_tv_show"
        android:name="com.example.submission4madeaziz.fragment.TvShowFragment"
        android:label="@string/title_tv_show"
        tools:layout="@layout/fragment_tv_show" />
    <fragment
        android:id="@+id/navigation_favorit"
        android:name="com.example.submission4madeaziz.fragment.FavoritFragment"
        android:label="@string/title_favorit"
        tools:layout="@layout/fragment_favorit" />
</navigation>